2009-06-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpListener2Test.cs: Added test for bug #513849.
	* HttpWebRequestTest.cs: Enabled test for bug #508027. Added test for
	bug #513087.
	* WebClientTest.cs: Added test for bug #484795, for Encoding property.

2009-06-16  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* WebRequestTest.cs: Drop NotWorking attrib, more accurate tests.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* WebRequestTest.cs: Added tests for bug #323452.

2009-06-06  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpWebRequestTest.cs: Added tests for bugs #465613, #510661,
	#510642 and #508027.

2009-05-17  Gert Driesen  <drieseng@users.sourceforge.net>

	* CookieTest.cs: Added test for Path.
	* CookieContainerTest.cs: Added and improved .ctor tests.
	Improved tests for Capacity and MaxCookieSize. Added tests for
	PerDomainCapacity. Added tests for Add overloads, GetCookieHeader,
	GetCookies and SetCookies. Added test for bug #421827.

2009-05-02  Atsushi Enomoto  <atsushi@ximian.com>

	* CredentialCacheTest.cs : new tests for get/add/remove.
	  Patch by Mineda Nozomi.

2009-04-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* DnsTest.cs: new IP for go-mono and fix AsyncResolve test.

2009-04-21  Sebastien Pouliot  <sebastien@ximian.com>

	* EndPointTest.cs: New

2009-02-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* DnsTest.cs: Use Assert syntax, and spaces to tabs. Added tests
	for argument checks.

2009-02-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpWebRequestTest.cs: Added Not-Modified-Since test. Updated
	bug numbers.

2009-02-05  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpListener2Test.cs: Make tests quiet.
	* HttpWebRequestTest.cs: Added test for bug #471782.

2009-01-20 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* IPAddressTest.cs: tests for bug #467472.

2009-01-16 Gonzalo Paniagua Javier <gonzalo@novell.com>
